Refactored and rewrote most of the plugin - Added a new config option: Scale.barScale - sets the size of the healthbar - Updated to the latest version of the heroes API (untested) - Changed quite a bit of logic to be clearer and give minor performance boosts - Added unload check for Heroes in addition to the loadcheck

--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,8 @@ main: me.plornt.healthbar.HealthBar
 version: 0.8
 author: Plornt
 description: Adds a healthbar to SpoutClients.
+depend: [Spout]
+softdepend: [Heroes]
 commands:
   healthbar:
     description: Provides functions to reload the config.
