--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: HealthBar
 main: org.necavi.minecraft.healthbar.HealthBar
-version: 1.1.2
+version: 1.1.3
 author: Necavi & Plornt 
 description: Adds a healthbar for SpoutClients.
 depend: [Spout]
@@ -9,6 +9,7 @@ commands:
   healthbar:
     description: Provides functions to reload the config.
     usage: healthbar
+    permission: healthbar.reload
 
 permissions:
   healthbar:
