--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 name: HealthBar
 main: org.necavi.minecraft.healthbar.HealthBar
-version: 1.1.3
+version: 1.2.0
 author: Necavi & Plornt 
 description: Adds a healthbar for SpoutClients.
 depend: [Spout]
-softdepend: [Heroes]
+softdepend: [Heroes, Factions, War]
 commands:
   healthbar:
     description: Provides functions to reload the config.
